@@ -669,6 +669,7 @@ void CheatCode(char NewKey)
                 tempLocation.X = Player[B].Location.X + Player[B].Location.Width / 2.0 - 16;
                 NewEffect(10, tempLocation);
             }
+            UpdateYoshiMusic();
             CheatString.clear();
             cheated = true;
         }
@@ -693,6 +694,7 @@ void CheatCode(char NewKey)
                 tempLocation.X = Player[B].Location.X + Player[B].Location.Width / 2.0 - 16;
                 NewEffect(10, tempLocation);
             }
+            UpdateYoshiMusic();
             CheatString.clear();
             cheated = true;
         }
@@ -717,6 +719,7 @@ void CheatCode(char NewKey)
                 tempLocation.X = Player[B].Location.X + Player[B].Location.Width / 2.0 - 16;
                 NewEffect(10, tempLocation);
             }
+            UpdateYoshiMusic();
             CheatString.clear();
             cheated = true;
         }
@@ -742,6 +745,7 @@ void CheatCode(char NewKey)
                 tempLocation.X = Player[B].Location.X + Player[B].Location.Width / 2.0 - 16;
                 NewEffect(10, tempLocation);
             }
+            UpdateYoshiMusic();
             CheatString.clear();
             cheated = true;
         }
@@ -766,6 +770,7 @@ void CheatCode(char NewKey)
                 tempLocation.X = Player[B].Location.X + Player[B].Location.Width / 2.0 - 16;
                 NewEffect(10, tempLocation);
             }
+            UpdateYoshiMusic();
             CheatString.clear();
             cheated = true;
         }
